--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -72,7 +72,7 @@
           <h1 class="intro-title">Some Header<span class="element" data-elements="Creative agency,Cubana,Modern"></span></h1>
           <p class="intro-text">Some sub heading</p>
           <div class="btn-bar">
-            <a href="#" class="btn btn-custom">Find a Meetup</a>
+            <a href="/events" class="btn btn-custom">Find a Meetup</a>
             <a href="#" class="btn btn-custom-outline">Create a Meetup</a>
           </div>
         </div>
