--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -23,15 +23,16 @@
   <link href="/styles/css/magnific-popup.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template -->
   <link href="/styles/css/style.css" rel="stylesheet">
+  <link href="/styles/css/homepage.css" rel="stylesheet">
   <link href="/styles/css/caitlin.css" rel="stylesheet" id="color-opt">
 
 </head>
 
 <body data-spy="scroll" data-offset="80">
-  <!-- Preloader -->
-  <!-- <div class="animationload">
+    <!-- Preloader -->
+  <div class="animationload">
     <div class="loader">&nbsp;</div>
-  </div> -->
+  </div> 
   <!-- End Preloader -->
 
   <!-- Header -->
@@ -51,6 +52,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+          <i class="fa fa-user fa-2x" aria-hidden="true"></i>
           <li><a href="#Login">Login</a></li>
           <li><a href="#Sign-up">Sign Up</a></li>
 
@@ -65,14 +67,14 @@
   <!-- Home -->
   <section id="home" class="home-section">
     <div id="video_container" class="video-bg-slider"></div>
-    <div id="P3" class="player video-container" data-property="{videoURL:'BKorP55Aqvg',containment:'#video_container',autoPlay:true, showControls:false, mute:true, startAt:0}"></div>
+    <div id="P3" class="player video-container" data-property="{videoURL:'P52aXzGHGU4',containment:'#video_container',autoPlay:true, showControls:false, mute:true, startAt:0}"></div>
     <div class="container slidero">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="intro-title">Some Header<span class="element" data-elements="Creative agency,Cubana,Modern"></span></h1>
+           <h1 class="intro-title">Join a community<span class="element" data-elements="for your puppy"></span></h1> 
           <p class="intro-text">Some sub heading</p>
           <div class="btn-bar">
-            <a href="/events" class="btn btn-custom">Find a Meetup</a>
+            <a href="/events" class="btn btn-custom-outline">Find a Meetup</a>
             <a href="#" class="btn btn-custom-outline">Create a Meetup</a>
           </div>
         </div>
@@ -261,7 +263,10 @@
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
   <!-- initialize jQuery Library -->
-  <script src="/styles/jquery.min.js"></script>
+ <script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
   <!-- jquery easing -->
   <script src="/styles/js/jquery.easing.min.js"></script>
   <!-- Bootstrap -->
@@ -290,7 +295,7 @@
   <!-- EasyPieChart -->
   <script src="/styles/js/jquery.circliful.min.js"></script>
   <!-- Typed -->
-  <script src="/styles/js/typed.js" type="text/javascript"></script>
+  <!-- <script src="/styles/js/typed.js" type="text/javascript"></script> -->
   <!-- Custom -->
   <script src="/styles/js/app.js" type="text/javascript"></script>
 
