--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -244,7 +244,8 @@ nav.small {
    box-shadow: 0 2px 2px rgba(0,0,0,.1);
 }
 
-.small .navbar-nav>li>a {
+.small .navbar-nav>li>a, 
+.small .navbar-nav > .fa.fa-user.fa-2x {
 	color: #666;
 }
 
