--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -24,8 +24,6 @@
   <!-- Custom styles for this template -->
   <link href="/styles/css/style.css" rel="stylesheet">
   <link href="/styles/css/homepage.css" rel="stylesheet">
-  <link href="/styles/css/caitlin.css" rel="stylesheet" id="color-opt">
-
 </head>
 
 <body data-spy="scroll" data-offset="80">
@@ -36,32 +34,7 @@
   <!-- End Preloader -->
 
   <!-- Header -->
-  <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        <a class="navbar-brand" href="#">Pup-Pals</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <i class="fa fa-user fa-2x" aria-hidden="true"></i>
-          <li><a href="#Login">Login</a></li>
-          <li><a href="#Sign-up">Sign Up</a></li>
-
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container -->
-  </nav>
+  <% include partials/_navbar.ejs%>
   <!-- /Header -->
 
   <!-- Home -->
