--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -10,20 +10,10 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
   <!-- Bootstrap core CSS -->
   <link href="/styles/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Owl-carousel CSS -->
-  <link href="/styles/css/owl.carousel.css" rel="stylesheet">
-  <link href="/styles/css/owl.theme.css" rel="stylesheet">
-  <link href="/styles/css/YTPlayer.css" rel="stylesheet" type="text/css" />
-  <!--external css-->
-  <link href="/styles/css/simple-line-icons.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <!-- Circliful CSS -->
-  <link href="/styles/css/jquery.circliful.css" rel="stylesheet" />
-  <!--popups css-->
-  <link href="/styles/css/magnific-popup.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template -->
   <link href="/styles/css/style.css" rel="stylesheet">
-  <link href="/styles/css/homepage.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+
 </head>
 
 <body data-spy="scroll" data-offset="80">
@@ -40,7 +30,7 @@
   <!-- Home -->
   <section id="home" class="home-section">
     <div id="video_container" class="video-bg-slider"></div>
-    <div id="P3" class="player video-container" data-property="{videoURL:'P52aXzGHGU4',containment:'#video_container',autoPlay:true, showControls:false, mute:true, startAt:0}"></div>
+    <!-- <div id="P3" class="player video-container" data-property="{videoURL:'P52aXzGHGU4',containment:'#video_container',autoPlay:true, showControls:false, mute:true, startAt:0}"></div> -->
     <div class="container slidero">
       <div class="row">
         <div class="col-md-12">
