--- a/server/views/partials/_owner.ejs
+++ b/server/views/partials/_owner.ejs
@@ -1,9 +1,7 @@
 <div class="owner-card">
-  <div class="row">
-    <div class="col-md-2 owner-box">
-      <img src="http://bryjensen.com/boffwiki/images/6/6e/Human.png">
+  <div class="owner-box">
+      <img class="owner-avatar" src="http://bryjensen.com/boffwiki/images/6/6e/Human.png">
       <h2 class="listContent">Emma Quon</h2>
       <p>Taking my pups to the park today!</p>
     </div>
-  </div>
 </div>
