--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -9,5 +9,6 @@
   <body>
     <div id="react-root"></div>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="http://localhost:10001/chat.js"></script>
   </body>
 </html>
