--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Pup-Pals</title>
-    <link rel="stylesheet" href="/styles/main.css">
+  <link href="/styles/css/style.css" rel="stylesheet">
 </head>
 <body>
   <div class="registerdiv">
