dummy pages created for puppy and user profile

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -9,7 +9,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
   <!-- Bootstrap core CSS -->
-  <link href="/styles/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Owl-carousel CSS -->
   <link href="/styles/css/owl.carousel.css" rel="stylesheet">
   <link href="/styles/css/owl.theme.css" rel="stylesheet">
@@ -40,7 +40,7 @@
   <!-- Home -->
   <section id="home" class="home-section">
     <div id="video_container" class="video-bg-slider"></div>
-    <div id="P3" class="player video-container" data-property="{videoURL:'P52aXzGHGU4',containment:'#video_container',autoPlay:true, showControls:false, mute:true, startAt:0}"></div>
+    <!-- <div id="P3" class="player video-container" data-property="{videoURL:'P52aXzGHGU4',containment:'#video_container',autoPlay:true, showControls:false, mute:true, startAt:0}"></div> -->
     <div class="container slidero">
       <div class="row">
         <div class="col-md-12">
