--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -5,29 +5,9 @@
   <title></title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="css/style.css" rel="stylesheet">
-  <link href="/styles/css/listty.css" rel="stylesheet">
-  <link href="/styles/css/homepage.css" rel="stylesheet">
-  <link href="/styles/css/owner-profile.css" rel="stylesheet">
-    <!-- Google Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
-  <!-- Bootstrap core CSS -->
-  <link href="/styles/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Owl-carousel CSS -->
-  <link href="/styles/css/owl.carousel.css" rel="stylesheet">
-  <link href="/styles/css/owl.theme.css" rel="stylesheet">
-  <link href="/styles/css/YTPlayer.css" rel="stylesheet" type="text/css" />
-  <!--external css-->
-  <link href="/styles/css/simple-line-icons.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <!-- Circliful CSS -->
-  <link href="/styles/css/jquery.circliful.css" rel="stylesheet" />
-  <!--popups css-->
-  <link href="/styles/css/magnific-popup.css" rel="stylesheet" type="text/css">
-  <!-- Custom styles for this template -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   <link href="/styles/css/style.css" rel="stylesheet">
-  <link href="/styles/css/homepage.css" rel="stylesheet">
 </head>
 
 <body>
