--- a/server/views/pet_profile.ejs
+++ b/server/views/pet_profile.ejs
@@ -4,8 +4,15 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/styles/build/main.css" rel="stylesheet">
   </head>
   <body>
+    <% include partials/_navbar.ejs %>
+    <% include partials/_event.ejs %>
+    <% include partials/_puppy.ejs %>
+    <p>Description</p>
+    <p>Size</p>
+    <p>Neutured</p>
+    <p>Temperment</p>
   </body>
 </html>
