worked on the event page, created components for the chat feature...chat bar work in progress

--- a/server/views/partials/_event.ejs
+++ b/server/views/partials/_event.ejs
@@ -1,5 +1,6 @@
 <div>
   <h2>Goldies Birthday Party</h2>
-  <p>Golden Retreiver</p>
-  <p>Age: 3</p>
+  <h6>Details</h6>
+  <p>Date and Time</p>
+
 </div>
