add initial styling for search page, add toggle react effect

--- a/styles/src/main.scss
+++ b/styles/src/main.scss
@@ -1,3 +1,8 @@
 @import "../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
-@import "variables";
 @import "home";
+@import "nav";
+@import "sidebar";
+@import "searchbar";
+@import "smalldetails";
+@import "largedetails";
+@import "map";
