cleaned up css files, nav bar on every page, temporary class registerdiv again

--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -5,13 +5,15 @@
   <title></title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
 
-  <link href="/styles/css/style.css" rel="stylesheet">
+  <link href="/styles/build/main.css" rel="stylesheet">
 </head>
 
 <body>
   <% include partials/_navbar.ejs %>
+  <div class="registerdiv">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-3">
@@ -25,7 +27,7 @@
         </div>
       </div>
     </div>
-
+  </div>
 
 </body>
 
