--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -8,21 +8,14 @@
   <!-- Google Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!-- Owl-carousel CSS -->
-  <link href="/styles/css/owl.carousel.css" rel="stylesheet">
-  <link href="/styles/css/owl.theme.css" rel="stylesheet">
+  <!-- Youtube CSS -->
   <link href="/styles/css/YTPlayer.css" rel="stylesheet" type="text/css" />
   <!--external css-->
-  <link href="/styles/css/simple-line-icons.css" rel="stylesheet" />
+   <link href="/styles/css/simple-line-icons.css" rel="stylesheet" /> 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <!-- Circliful CSS -->
-  <link href="/styles/css/jquery.circliful.css" rel="stylesheet" />
-  <!--popups css-->
-  <link href="/styles/css/magnific-popup.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template -->
   <link href="/styles/css/style.css" rel="stylesheet">
+  <link href="/styles/build/main.css" rel="stylesheet">  
 </head>
 
 <body data-spy="scroll" data-offset="80">
@@ -245,8 +238,6 @@
   <script src="/styles/js/bootstrap.min.js"></script>
   <!-- SmoothScroll -->
   <script src="/styles/js/SmoothScroll.js"></script>
-  <!-- owl-carousel -->
-  <script src="/styles/js/owl.carousel.js"></script>
   <!-- Video -->
   <script type="text/javascript" src="/styles/js/jquery.mb.YTPlayer.js"></script>
   <!-- Counter-up -->
@@ -271,22 +262,6 @@
   <!-- Custom -->
   <script src="/styles/js/app.js" type="text/javascript"></script>
 
-  <!-- Switcher script for demo only -->
-  <script type="text/javascript" src="/styles/js/switcher.js"></script>
-
 </body>
 
 </html>
-
-<!-- <h1>It works</h1>
-  <form action="/search" method="get">
-    <p>
-      <label for="search-query">Search</label>
-      <input id="search-query" name="q">
-    </p>
-    <p>
-      <button>Go</button>
-    </p>
-  </form>
-</body>
-</html> -->
