linked login/signup from nav bar

--- a/server/views/partials/_navbar.ejs
+++ b/server/views/partials/_navbar.ejs
@@ -12,8 +12,8 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#Login">Login</a></li>
-        <li><a href="#Sign-up">Sign Up</a></li>
+        <li><a href="/user/login">Login</a></li>
+        <li><a href="/user/signup">Sign Up</a></li>
       </ul>
     </div>
   </div>
