--- a/server/views/partials/_owner.ejs
+++ b/server/views/partials/_owner.ejs
@@ -1,8 +1,8 @@
 <div class="owner-card">
   <div class="owner-box">
-      <img class="owner-avatar" src="<%= data.avatar_url %>" style="width:200px">
-      <h2 class="listContent"><%= data.username %></h2>
-      <h4><%= data.name %></h4>
-      <p><%= data.status %></p>
+      <img class="owner-avatar" src="<%= data[0].avatar_url %>" style="width:200px">
+      <h2 class="listContent"><%= data[0].username %></h2>
+      <h4><%= data[0].name %></h4>
+      <p><%= data[0].status %></p>
     </div>
 </div>
