--- a/styles/src/main.scss
+++ b/styles/src/main.scss
@@ -7,3 +7,4 @@
 @import "largedetails";
 @import "map";
 @import "login-signup";
+@import "../../search-client/node_modules/react-day-picker/lib/style";
