Adds fix for rendering duplicate pup/event data

--- a/server/views/partials/_event.ejs
+++ b/server/views/partials/_event.ejs
@@ -1,12 +1,12 @@
 <div class="smalldetails">
 	<div class="smalldetails-header">
-		<h3 class="smalldetails-title"><%= data[0].events.title %></h3>
+		<h3 class="smalldetails-title"><%= data[i].events.title %></h3>
 		<span class="smalldetails-attendees">10 Going</span>
 	</div>
 	<div class="smalldetails-body">
-		<span class="smalldetails-date"><%= data[0].events.event_time %></span>
-		<span class="smalldetails-location"><%= data[0].events.location %></span>
-		<span class="smalldetails-location"><%= data[0].events.description %></span>
+		<span class="smalldetails-date"><%= data[i].events.event_time %></span>
+		<span class="smalldetails-location"><%= data[i].events.location %></span>
+		<span class="smalldetails-location"><%= data[i].events.description %></span>
 	</div>
 	<div class="smalldetails-footer">
 		<span class="smalldetails-rsvp">
