--- a/server/views/event_detail.ejs
+++ b/server/views/event_detail.ejs
@@ -4,10 +4,12 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
     <link href="/styles/build/main.css" rel="stylesheet">
   </head>
   <body>
-     <script src="/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
    
 
     <% include partials/_navbar.ejs %>
@@ -29,7 +31,11 @@
     
       </div>
     </div>
-  
-    <script src="http://localhost:10001/chat.js"></script>
+    
+    <% if (process.env.NODE_ENV === 'production') { %>
+      <script src="/scripts/chat.js"></script>
+    <% } else { %>
+      <script src="http://localhost:10001/chat.js"></script>
+    <% } %>
   </body>
 </html>
