adds migration altering event_time column

--- a/server/views/create.ejs
+++ b/server/views/create.ejs
@@ -33,7 +33,7 @@
       </p>
       <p>
         <label for="time-input">Enter a date and time for your event</label>
-        <input class="input time-input" type="text" name="time">
+        <input class="input time-input" type="datetime-local" name="time">
       </p>
       <button type="submit" class="formbtn">Submit</button>
     </form>
