--- a/server/views/partials/_event_owner.ejs
+++ b/server/views/partials/_event_owner.ejs
@@ -1,6 +1,6 @@
 <div class="owner-card">
   <div class="owner-box">
-      <img class="owner-avatar" src="<%= item.avatar_url %>" style="width:200px">
-      <h2 class="listContent"><%= item.username %></h2>
+      <img class="owner-avatar" src="<%= item.avatar_url %>" style="width:80px">
+      <h2 class="listContent"><%= item.name %></h2>
     </div>
 </div>
