added some queries and configured some routes

--- a/server/views/owner_profile.ejs
+++ b/server/views/owner_profile.ejs
@@ -21,6 +21,7 @@
             <%= data[i].pups.name %>
             <% include partials/_puppy.ejs %>
           <% } %>
+          <a href="/pet/new">Add New Pups</a>
         </div>
         <div class="col-md-6 text-center">
           <% include partials/_owner.ejs %>
