--- a/server/views/event_create.ejs
+++ b/server/views/event_create.ejs
@@ -14,7 +14,7 @@
   <% include partials/_navbar.ejs%>
   <div class="registerdiv">
     <h2>Create a Event</h2>
-    <form method="POST" action="/events/create" class="register-form">
+    <form method="POST" action="/events/new" class="register-form">
       <p>
         <label for="title-input">Enter a title for your event</label>
         <input class="input title-input" type="text" name="title">
