--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -40,7 +40,7 @@
           <p class="intro-text">Some sub heading</p>
           <div class="btn-bar">
             <a href="/events" class="btn btn-custom-outline">Find a Meetup</a>
-            <a href="#" class="btn btn-custom-outline">Create a Meetup</a>
+            <a href="/events/new" class="btn btn-custom-outline">Create a Meetup</a>
           </div>
         </div>
         <!-- /col -->
